# microbit-led-party

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: gravity.rs  i2c.rs  led_party.rs  main.rs  serial.rs  uart.rs
src/compass/: calibration.rs  mod.rs
