[package]
name = "microbit-led-party"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
nb = "1.0.0"
heapless = "0.7.10"
microbit-v2 = "0.12.0"
embedded-hal = "0.2.6"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
lsm303agr = "0.2.2"
libm = "0.2.1"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

# [profile.release]
# codegen-units = 1
# debug = true
# lto = true
